--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./assets/styles/generic";
+@import "./assets/styles/qrctalk-variables.scss";
+@import "./assets/styles/qrctalk-mixins.scss";
+@import "./assets/styles/qrctalk-extends.scss";
