added create user logic

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,6 +3,9 @@
         <button (click)="getUsersHandler()">
             Get User List
         </button>
+        <button (click)="addUserHandler()">
+            Add User
+        </button>
 
     </div>
 </div>
