added crud component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,7 @@
 <div class="home-container">
     <div class="commands">
-        <button (click)="getUsersHandler()">
-            Get User List
+        <button (click)="navigateToCrud()">
+            Execute Basic CRUD
         </button>
-        <button (click)="addUserHandler()">
-            Add User
-        </button>
-
     </div>
 </div>
